# gobase

./: .dockerignore  .env  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  bazel-gobase  build  build.sh  constants.bzl  doc.go  docker-compose.local.yml  docker-compose.yml  go.mod  go.sum  go_repositories.bzl  postgres.dockerfile  skaffold.yaml  tools.go
admin/: BUILD.bazel
admin/api/: BUILD.bazel
admin/app/: BUILD.bazel  server.go
admin/cmd/: BUILD.bazel
admin/pkg/account/: BUILD.bazel  role_handler.go  user_handler.go
admin/server/: .gitignore  go.mod  go.sum  main.go
admin/server/api/: api.proto
admin/server/app/: app.go  server.go
admin/server/cmd/: BUILD.bazel  main.go  serve.go  version.go
admin/server/pkg/account/: BUILD.bazel  role_handler.go  role_service.go  user_handler.go  user_service.go
admin/server/resources/: go.mod
admin/server/resources/cmd/: serve.go
admin/server/resources/pkg/account/: role_handler.go  role_service.go
apps/auth-server/: .gitignore  BUILD.bazel  go.mod  go.sum  main.go
apps/auth-server/app/: BUILD.bazel  app.go  router.go
apps/auth-server/cmd/: BUILD.bazel  serve.go
apps/auth-server/internal/config/: BUILD.bazel  config.go
apps/auth-server/internal/oauth2/: BUILD.bazel  auth.go  introspect.go  oauth2.go  provider.go  revoke.go  token.go
apps/uaa/: BUILD.bazel  main.go  web-static.yaml
apps/uaa-admin/: BUILD.bazel  main.go
apps/uaa-admin/app/: BUILD.bazel  app.go  config.go  server.go
apps/uaa-admin/cmd/: BUILD.bazel  serve.go
apps/uaa-admin/internal/account/: BUILD.bazel  role_handler.go  role_service.go  user_handler.go  user_service.go
apps/uaa-admin/web/: angular.json  karma.conf.js  package.json
apps/uaa-admin/web/src/: _reset.scss
apps/uaa-admin/web/src/app/: app.component.html  app.component.spec.ts
apps/uaa/app/: BUILD.bazel  app.go  router.go  routes.go  server.go  wire.go  wire_gen.go
apps/uaa/cmd/: BUILD.bazel  app.go  router.go  serve.go
apps/uaa/internal/account/: BUILD.bazel  handler.go  notifier.go  providers.go  routes.go  service.go
apps/uaa/internal/auth/: BUILD.bazel  handlers.go  jwt.go  sso.go
apps/uaa/internal/config/: BUILD.bazel  config.go
apps/uaa/internal/helpers/: BUILD.bazel
apps/uaa/internal/oauth2/: BUILD.bazel  consent.go  login.go  routes.go  service.go  templates.go
apps/uaa/internal/static/: asset.go
apps/uaa/internal/template_util/: template_registry.go
apps/uaa/internal/utils/: BUILD.bazel  template_registry.go
apps/uaa/pkg/account/: handler.go  notifier.go  service.go
apps/uaa/pkg/auth/: BUILD.bazel  handlers.go  jwt.go  sso.go
apps/uaa/pkg/config/: BUILD.bazel  config.go
apps/uaa/resources/config/: app.yml
apps/uaa/resources/templates/email/: layout.html
apps/uaa/resources/templates/email/account/: init_password_reset.html
apps/uaa/resources/web/templates/account/: consent.html  reset-password-init.html  sign-up-form.html
apps/uaa/resources/web/templates/layout/: base.html
apps/uaa/static/: BUILD.bazel  ab0x.go
apps/uaa/web/src/pages/: login.js
apps/uaa/web/src/pages/account/: activation-error.html
apps/uaa/web/src/pages/auth/: login.js
client/: .gitignore  BUILD.bazel  main.go
client/account/: BUILD.bazel  handler.go  notifier.go  service.go
client/app/: BUILD.bazel  config.go  router.go  server.go  wire.go  wire_gen.go
client/resources/config/: app.yml
client/test/: BUILD.bazel  app_suite_test.go  user_handler_test.go  utils.go
client_app/: BUILD.bazel  go.mod  go.sum  main.go
client_app/account/: BUILD.bazel  handler.go  notifier.go  service.go
client_app/app/: BUILD.bazel  config.go  router.go  server.go  wire.go  wire_gen.go
client_app/config/: BUILD.bazel  config.go
client_app/resources/config/: app.yml
client_app/test/: BUILD.bazel  app_suite_test.go  user_handler_test.go  utils.go
common/auth/: BUILD.bazel  go.mod  go.sum
common/email/: BUILD.bazel  go.mod  go.sum
common/error_util/: BUILD.bazel  errors.go
common/health/: BUILD.bazel  health.go
db_migration/cmd/: BUILD.bazel  rollback_migration.go  root.go
model/: BUILD.bazel  db.go  go.mod  go.sum  permission.go  role.go  shared.go  user.go  user_credential.go
pkg/config/: BUILD.bazel  config.go
pkg/db/: BUILD.bazel  db.go
pkg/model/: BUILD.bazel  permission.go  role.go  shared.go  staff.go  user.go  user_credential.go
pkg/template_util/: BUILD.bazel  template_registry.go
uaa/api/: BUILD.bazel  client_store.go  go.mod  go.sum  password_check.go  server.go  token.go
uaa/api/resources/web/templates/: header.html
uaa/example/: BUILD.bazel  go.mod  go.sum  main.go
uaa/uaa-admin/: BUILD.bazel  go.mod  go.sum  main.go
uaa/uaa-admin/app/: BUILD.bazel  app.go  config.go  server.go
uaa/uaa-admin/cmd/: BUILD.bazel  serve.go
uaa/uaa-admin/pkg/account/: BUILD.bazel  role_handler.go  role_service.go  user_handler.go
uaa/uaa-admin/resources/: go.mod  main.go
uaa/uaa-admin/resources/app/: app.go  server.go
uaa/uaa-admin/resources/cmd/: serve.go  version.go
uaa/uaa-admin/resources/config/: app.yml
uaa/uaa-admin/resources/pkg/account/: role_service.go
uaa/uaa-server/: BUILD.bazel  go.mod  go.sum  hydra.sh  main.go
uaa/uaa-server/app/: BUILD.bazel  app.go  routes.go  server.go  wire.go  wire_gen.go
uaa/uaa-server/cmd/: BUILD.bazel  main.go  serve.go
uaa/uaa-server/internal/account/: BUILD.bazel  handler.go  providers.go  routes.go  service.go
uaa/uaa-server/internal/config/: BUILD.bazel  config.go
uaa/uaa-server/internal/helpers/: BUILD.bazel  helpers.go
uaa/uaa-server/internal/oauth2/: BUILD.bazel  consent.go  hydra.go  login.go  routes.go  service.go  templates.go
uaa/uaa-server/internal/utils/: BUILD.bazel  template_registry.go
uaa/uaa-server/pkg/account/: handler.go  notifier.go  providers.go  routes.go  service.go
uaa/uaa-server/pkg/config/: config.go
uaa/uaa-server/pkg/hydra_impl/: consent.go  hydra.go  login.go  logout.go  routes.go  templates.go
uaa/uaa-server/pkg/oauth2/: consent.go  hydra.go  logout.go  routes.go  templates.go
uaa/uaa-server/resources/config/: app.yml
(+506 files in other folders)
