load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mmrath/gobase
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/mmrath/gobase",
    visibility = ["//visibility:public"],
)
