load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mmrath/gobase/client",
    visibility = ["//visibility:private"],
    deps = [
        "//client/app:go_default_library",
        "//pkg/email:go_default_library",
    ],
)

go_binary(
    name = "client_app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
