load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "mmrath.com/gobase/client_app",
    visibility = ["//visibility:private"],
    deps = ["//common/email:go_default_library"],
)

go_binary(
    name = "client_app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
