load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth_token.go",
        "db.go",
        "permission.go",
        "role.go",
        "shared.go",
        "user.go",
        "user_credential.go",
    ],
    importpath = "github.com/mmrath/gobase/model",
    visibility = ["//visibility:public"],
    deps = [
        "//common/error_util:go_default_library",
        "@com_github_go_ozzo_ozzo_validation//:go_default_library",
        "@com_github_go_ozzo_ozzo_validation//is:go_default_library",
        "@com_github_go_pg_pg//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)
