load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "app.go",
        "config.go",
        "server.go",
    ],
    importpath = "github.com/mmrath/gobase/admin/app",
    visibility = ["//visibility:public"],
    deps = [
        "//admin/pkg/account:go_default_library",
        "//common/config:go_default_library",
        "//model:go_default_library",
        "@com_github_go_chi_chi//:go_default_library",
        "@com_github_go_chi_chi//middleware:go_default_library",
        "@com_github_go_chi_cors//:go_default_library",
        "@com_github_go_chi_render//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)
