load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mmrath/gobase/apps/auth-server",
    visibility = ["//visibility:private"],
    deps = ["//apps/auth-server/cmd:go_default_library"],
)

go_binary(
    name = "auth-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
