load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mmrath/gobase/apps/uaa-admin",
    visibility = ["//visibility:private"],
    deps = ["//apps/uaa-admin/cmd:go_default_library"],
)

go_binary(
    name = "uaa-admin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
