load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mmrath/gobase/apps/uaa",
    visibility = ["//visibility:private"],
    deps = ["//apps/uaa/cmd:go_default_library"],
)

go_binary(
    name = "uaa",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
