load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "router.go",
        "server.go",
        "wire_gen.go",
    ],
    importpath = "github.com/mmrath/gobase/client/app",
    visibility = ["//visibility:public"],
    deps = [
        "//client/account:go_default_library",
        "//common/auth:go_default_library",
        "//common/config:go_default_library",
        "//common/email:go_default_library",
        "//model:go_default_library",
        "@com_github_go_chi_chi//:go_default_library",
        "@com_github_go_chi_chi//middleware:go_default_library",
        "@com_github_go_chi_cors//:go_default_library",
        "@com_github_go_chi_render//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)
