load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["utils.go"],
    importpath = "github.com/mmrath/gobase/client/test",
    visibility = ["//visibility:public"],
    deps = ["//pkg/email:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "app_suite_test.go",
        "user_handler_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//client/app:go_default_library",
        "//pkg/auth:go_default_library",
        "//pkg/crypto:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_gavv_httpexpect//:go_default_library",
        "@com_github_mmrath_gobase//model:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
