load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["jwt.go"],
    importpath = "mmrath.com/gobase/common/auth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_go_chi_jwtauth//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
