load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["errors.go"],
    importpath = "github.com/mmrath/gobase/common/error_util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_chi_render//:go_default_library",
        "@com_github_go_ozzo_ozzo_validation//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)
