load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["health.go"],
    importpath = "github.com/mmrath/gobase/common/health",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_chi_chi//:go_default_library",
        "@com_github_go_chi_render//:go_default_library",
    ],
)
