load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "rollback_migration.go",
        "root.go",
    ],
    importpath = "mmrath.com/gobase/db_migration/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//db_migration/app:go_default_library",
        "@com_github_golang_migrate_migrate//v4/database/postgres:go_default_library",
        "@com_github_golang_migrate_migrate//v4/source/github:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
