load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/mmrath/gobase/pkg/db",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/error_util:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/postgres:go_default_library",
    ],
)
