load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["template_registry.go"],
    importpath = "github.com/mmrath/gobase/pkg/template_util",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/error_util:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)
