load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client_store.go",
        "password_check.go",
        "server.go",
        "token.go",
    ],
    importpath = "mmrath.com/gobase/uaa/api",
    visibility = ["//visibility:private"],
    deps = [
        "//common/crypto:go_default_library",
        "//model:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_go_session_session//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_oauth2_v3//:go_default_library",
        "@in_gopkg_oauth2_v3//errors:go_default_library",
        "@in_gopkg_oauth2_v3//generates:go_default_library",
        "@in_gopkg_oauth2_v3//manage:go_default_library",
        "@in_gopkg_oauth2_v3//server:go_default_library",
        "@in_gopkg_oauth2_v3//store:go_default_library",
    ],
)

go_binary(
    name = "api",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
