load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "templates.go",
    ],
    importpath = "mmrath.com/gobase/uaa/example",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_coreos_go_oidc//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "example",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
