load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mmrath/gobase/uaa/uaa-admin",
    visibility = ["//visibility:private"],
    deps = ["//uaa/uaa-admin/cmd:go_default_library"],
)

go_binary(
    name = "uaa-admin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
