load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mmrath/gobase/uaa/uaa-server",
    visibility = ["//visibility:private"],
    deps = ["//uaa/uaa-server/cmd:go_default_library"],
)

go_binary(
    name = "uaa-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
